# shared_memory

./: CMakeLists.txt  README.md
shm_reader/: CMakeLists.txt
shm_reader/src/: readobj.cpp
shm_writer/: CMakeLists.txt
shm_writer/src/: writeobj.cpp
shmlib/: CMakeLists.txt
shmlib/include/: shmutils.hpp
shmlib/src/: shmlib.cpp
